--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@shekhar-raval/logger",
+  "name": "@shekhar.raval/logger",
   "version": "0.0.2",
   "description": "Logger for microservices",
   "main": "./dist/index.js",
