--- a/package.json
+++ b/package.json
@@ -33,15 +33,21 @@
   },
   "homepage": "https://github.com/raval-shekhar/rest-logger#readme",
   "dependencies": {
+    "cls-hooked": "^4.2.2",
+    "express": "^4.17.1",
     "pino": "^6.11.1",
     "pino-elasticsearch": "^5.4.0",
     "pino-http": "^5.5.0",
     "pino-multi-stream": "^5.2.0",
-    "pino-pretty": "^4.5.0"
+    "pino-pretty": "^4.5.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "@types/cls-hooked": "^4.3.3",
+    "@types/express": "^4.17.11",
     "@types/pino-http": "^5.4.0",
     "@types/pino-multi-stream": "^5.1.0",
+    "@types/uuid": "^8.3.0",
     "nodemon": "^2.0.7",
     "rimraf": "^3.0.2",
     "ts-node": "^9.1.1",
