--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   "dependencies": {
     "cls-hooked": "^4.2.2",
     "express": "^4.17.1",
+    "helmet": "^4.6.0",
     "pino": "^6.11.1",
     "pino-elasticsearch": "^5.4.0",
     "pino-http": "^5.5.0",
